tests/typechecker/should_fail/subtypes_2.csp
datatype X = A | B.{0}

subtype X' = B.0
